--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -45,10 +45,10 @@
   font-weight: 500;
   font-size: 1rem;
   transition: opacity 0.2s;
-}
 
-.navbar-menu li a:hover {
-  opacity: 0.8;
+  &:hover {
+    opacity: 0.8;
+  }
 }
 
 .navbar-profile {
@@ -65,10 +65,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
 
-.profile-avatar svg {
-  width: 100%;
-  height: 100%;
+  svg {
+    width: 100%;
+    height: 100%;
+  }
 }
 
