--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './styles/animations';
+
 @font-face {
   font-family: 'Museo Sans Rounded';
   src: url('./assets/fonts/museo-sans-rounded/MuseoSansRounded500.otf') format('opentype');
