--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'Museo Sans Rounded';
+  src: url('./assets/fonts/museo-sans-rounded/MuseoSansRounded700.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 * {
   margin: 0;
   padding: 0;
