--- a/src/components/CardInput/CardInput.scss
+++ b/src/components/CardInput/CardInput.scss
@@ -7,7 +7,7 @@
   border-radius: 6px;
   background-color: white;
   transition: border-color 0.2s;
-
+  position: relative;
   &:focus-within {
     border-color: #026786;
     outline: none;
@@ -18,6 +18,10 @@
   display: flex;
   align-items: center;
   flex-shrink: 0;
+  position: absolute;
+  left: 1.5rem;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .card-icon {
@@ -31,6 +35,7 @@
   align-items: center;
   gap: 1rem;
   flex: 1;
+  padding-left: 3rem;
 }
 
 .card-input {
