--- a/src/index.scss
+++ b/src/index.scss
@@ -27,9 +27,9 @@
   line-height: 1.5;
   font-weight: 500;
 
-  color-scheme: light dark;
+  color-scheme: light;
   color: #213547;
-  background-color: #ffffff;
+  background-color: #FCFCFC;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -41,12 +41,6 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
-  }
+  background-color: #FCFCFC;
 }
 
