Add Redux for state management in SubscriptionForm and CardInput components. Integrate redux-persist for persisting card details, and refactor components to utilize Redux hooks for state updates. Update SCSS imports to use the new syntax.

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,7 +2,7 @@
 // Navbar Component Styles
 // ============================================================================
 
-@import '../../styles/animations';
+@use '../../styles/animations' as *;
 
 // ----------------------------------------------------------------------------
 // Variables
