--- a/src/ui/CardInput/CardInput.scss
+++ b/src/ui/CardInput/CardInput.scss
@@ -8,9 +8,15 @@
   background-color: white;
   transition: border-color 0.2s;
   position: relative;
+  width: 100%;
+  box-sizing: border-box;
   &:focus-within {
     border-color: #026786;
     outline: none;
+  }
+
+  @media (max-width: 768px) {
+    padding: 0.625rem 0.875rem;
   }
 }
 
@@ -22,12 +28,21 @@
   left: 1.5rem;
   top: 50%;
   transform: translateY(-50%);
+
+  @media (max-width: 768px) {
+    left: 0.875rem;
+  }
 }
 
 .card-icon {
   color: #999;
   width: 24px;
   height: 24px;
+
+  @media (max-width: 768px) {
+    width: 20px;
+    height: 20px;
+  }
 }
 
 .card-inputs-wrapper {
@@ -36,6 +51,12 @@
   gap: 1rem;
   flex: 1;
   padding-left: 3rem;
+  min-width: 0;
+
+  @media (max-width: 768px) {
+    padding-left: 2.5rem;
+    gap: 0.5rem;
+  }
 }
 
 .card-input {
@@ -45,6 +66,7 @@
   font-size: 18px;
   color: #333;
   padding: 0;
+  box-sizing: border-box;
 
   &::placeholder {
     color: #999;
@@ -63,5 +85,17 @@
   &.cvc-input {
     width: 60px;
     text-align: center;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 16px;
+
+    &.expiry-input {
+      width: 70px;
+    }
+
+    &.cvc-input {
+      width: 55px;
+    }
   }
 }
