--- a/src/ui/PlanCard/PlanCard.scss
+++ b/src/ui/PlanCard/PlanCard.scss
@@ -10,6 +10,9 @@
   flex-direction: column;
   height: 100%;
   box-sizing: border-box;
+  width: 100%;
+  max-width: 100%;
+  min-width: 0;
 
   &:hover {
     border-color: #20b2aa;
@@ -18,6 +21,11 @@
   &.plan-card-selected {
     border: 2px solid #00A3AD;
     background-color: #00A3AD0D;
+  }
+
+  @media (max-width: 768px) {
+    padding: 1rem;
+    max-width: 100%;
   }
 }
 
