Refactor SCSS imports in DeviceFormUI and SubscriptionFormUI to use the new @use syntax for better modularity and maintainability.

--- a/src/ui/DeviceFormUI/DeviceFormUI.scss
+++ b/src/ui/DeviceFormUI/DeviceFormUI.scss
@@ -1,6 +1,6 @@
 @use '../../styles/variables' as *;
 @use '../../styles/mixins' as *;
-@import '../../styles/FormShared.scss';
+@use '../../styles/FormShared.scss' as *;
 
 // Device Form Container
 .device-form-container {
