--- a/src/ui/SubscriptionFormUI/SubscriptionFormUI.scss
+++ b/src/ui/SubscriptionFormUI/SubscriptionFormUI.scss
@@ -1,6 +1,6 @@
 @use '../../styles/variables' as *;
 @use '../../styles/mixins' as *;
-@import '../../styles/FormShared.scss';
+@use '../../styles/FormShared.scss' as *;
 
 // Subscription Form Container
 .subscription-form-container {
